tests/miniJava/neg/006674_mutation.MiniJava
class java { public static void Main true ( String [ ] java ) { { } } }
